--- a/checkout.html
+++ b/checkout.html
@@ -56,7 +56,7 @@
 
         <div class="common-page-wrap">
             <div class="container">
-                <div class="row">
+                <div class="row gy-3">
                     <div class="col col-8 col-lg-12">
                         <div class="user-main">
                             <div class="check-out">
@@ -113,6 +113,9 @@
                                                 <button
                                                     class="check-out__item-save"
                                                 >
+                                                    <span
+                                                        class="fav-add"
+                                                    ></span>
                                                     Save
                                                 </button>
                                                 <button
@@ -178,6 +181,9 @@
                                                 <button
                                                     class="check-out__item-save"
                                                 >
+                                                    <span
+                                                        class="fav-add"
+                                                    ></span>
                                                     Save
                                                 </button>
                                                 <button
@@ -243,6 +249,9 @@
                                                 <button
                                                     class="check-out__item-save"
                                                 >
+                                                    <span
+                                                        class="fav-add"
+                                                    ></span>
                                                     Save
                                                 </button>
                                                 <button
@@ -257,7 +266,7 @@
 
                                 <div class="check-out__bot">
                                     <a
-                                        href="#!"
+                                        href="./index.html"
                                         class="check-out__back d-none-md"
                                     >
                                         <svg
@@ -288,7 +297,7 @@
                                                 <div
                                                     class="check-out__calc-compose-num"
                                                 >
-                                                    $ 191.65
+                                                    $ 331.90
                                                 </div>
                                             </div>
 
@@ -315,7 +324,7 @@
                                                 <div
                                                     class="check-out__calc-num"
                                                 >
-                                                    $10.00
+                                                    $ 341.90
                                                 </div>
                                             </div>
                                         </div>
@@ -324,10 +333,55 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col col-4 d-none-lg">
-                        <div class="user-main"></div>
+                    <div class="col col-4 col-lg-12">
+                        <div class="user-main">
+                            <div class="side-calc">
+                                <div class="side-calc__line">
+                                    <div class="side-calc__label">
+                                        Subtotal <i>(items)</i>
+                                    </div>
+                                    <div class="side-calc__amount">8</div>
+                                </div>
+                                <div class="side-calc__line">
+                                    <div class="side-calc__label">
+                                        Price <i>(Total)</i>
+                                    </div>
+                                    <div class="side-calc__amount">
+                                        $ 331.90
+                                    </div>
+                                </div>
+                                <div class="side-calc__line">
+                                    <div class="side-calc__label">Shipping</div>
+                                    <div class="side-calc__amount">$ 10.00</div>
+                                </div>
+                                <div class="side-calc__line">
+                                    <div class="side-calc__label">
+                                        Estimated Total
+                                    </div>
+                                    <div class="side-calc__amount">
+                                        $ 341.90
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                         <div class="common-page-wrap">
-                            <div class="user-main"></div>
+                            <div class="user-main">
+                                <div class="side-promote">
+                                    <div class="side-promote__icon">
+                                        <img
+                                            src="./assets/icon/gift.svg"
+                                            alt="gift"
+                                        />
+                                    </div>
+                                    <div class="side-promote__title">
+                                        Send this order as a gift.
+                                    </div>
+                                    <div class="side-promote__desc">
+                                        Available items will be shipped to your
+                                        gift recipient.
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
