--- a/production.html
+++ b/production.html
@@ -243,11 +243,11 @@
                                                 <div
                                                     class="production__price-action"
                                                 >
-                                                    <button
+                                                    <a href="./checkout.html"
                                                         class="production__price-btn"
                                                     >
                                                         Add to cart
-                                                    </button>
+                                                    </a>
                                                     <div
                                                         class="production__price-fav"
                                                     >
