--- a/user.html
+++ b/user.html
@@ -365,7 +365,7 @@
                                                 $47.00
                                             </div>
                                             <a
-                                                href="#!"
+                                                href="./checkout.html"
                                                 class="user-list__item-btn"
                                             >
                                                 Add to cart
@@ -387,7 +387,7 @@
                                                 $53.00
                                             </div>
                                             <a
-                                                href="#!"
+                                                href="./checkout.html"
                                                 class="user-list__item-btn"
                                             >
                                                 Add to cart
