--- a/checkout.html
+++ b/checkout.html
@@ -363,6 +363,9 @@
                                     </div>
                                 </div>
                             </div>
+                            <a href="./shipping.html" class="side-calc__btn">
+                                Continue to checkout
+                            </a>
                         </div>
                         <div class="common-page-wrap">
                             <div class="user-main">
