--- a/checkout.html
+++ b/checkout.html
@@ -39,6 +39,20 @@
             load("#header", "./templates/header.html");
         </script>
         <!-- body -->
+
+        <div class="common-page-wrap">
+            <div class="container">
+                <form action="#!" class="user-mod-search-bar">
+                    <input
+                        type="text"
+                        class="user-mod-search-bar__input"
+                        placeholder="Search for item"
+                    />
+                    <button class="user-mod-search-bar__icon"></button>
+                </form>
+            </div>
+        </div>
+
         <div class="common-page-wrap">
             <div class="container">
                 <div class="page-path">
