--- a/shipping.html
+++ b/shipping.html
@@ -385,10 +385,10 @@
                                                 stroke-linejoin="round"
                                             />
                                         </svg>
-                                        Continue Checkout
+                                        Back to Checkout
                                     </a>
                                     <a
-                                        href="#!"
+                                        href="./payment-method.html"
                                         class="shipping__btn-next d-block d-none-lg"
                                         >Continue</a
                                     >
@@ -427,7 +427,7 @@
                                 </div>
                             </div>
                             <a
-                                href="#!"
+                                href="./payment-method.html"
                                 class="side-calc__btn d-none d-block-lg"
                             >
                                 Continue
