--- a/payment-method.html
+++ b/payment-method.html
@@ -287,6 +287,29 @@
                             <button href="#!" class="payment__action-btn">
                                 Pay $ 341.90
                             </button>
+                            <hr />
+                            <a
+                                href="./checkout.html"
+                                class="check-out__back"
+                                style="align-self: self-start"
+                            >
+                                <svg
+                                    xmlns="http://www.w3.org/2000/svg"
+                                    width="10"
+                                    height="16"
+                                    viewBox="0 0 10 16"
+                                    fill="none"
+                                >
+                                    <path
+                                        d="M8.5 15L1.5 8L8.5 1"
+                                        stroke="currentColor"
+                                        stroke-width="1.5"
+                                        stroke-linecap="round"
+                                        stroke-linejoin="round"
+                                    />
+                                </svg>
+                                Back to Shipping
+                            </a>
                         </div>
                     </div>
                 </div>
