--- a/main-page.html
+++ b/main-page.html
@@ -34,11 +34,12 @@
     </head>
     <body>
         <!--  -->
-        <header id="header" class="header for-login"></header>
+        <header id="header" class="header "></header>
         <script>
             load("#header", "./templates/header.html");
         </script>
         <!-- body -->
+       
         <!-- slide show -->
         <div class="home-wrap">
             <section class="slideShow">
