--- a/sign-in.html
+++ b/sign-in.html
@@ -79,13 +79,18 @@
                             />
                             <h1 class="logo__title">grocery mart</h1>
                         </a>
-                        <h2 class="sign__content-title">Sign Up</h2>
+                        <h2 class="sign__content-title">Hello Again!</h2>
                         <p class="sign__content-desc">
-                            Let’s create your account and Shop like a pro and
-                            save money.
+                            Welcome back to sign in. As a returning customer,
+                            you have access to your previously saved all
+                            information.
                         </p>
                         <form action="#!" class="sign__form">
-                            <div class="sign__input-line">
+                            <!--  -->
+
+                            <!--  -->
+
+                            <div class="sign__input-line email">
                                 <input
                                     type="email"
                                     placeholder="Email"
@@ -104,17 +109,7 @@
                                     required
                                 />
                             </div>
-                            <div class="sign__input-line">
-                                <input
-                                    type="password"
-                                    placeholder="Confirm Password"
-                                />
-                                <img
-                                    src="./assets/icon/lock.svg"
-                                    alt="password"
-                                    required
-                                />
-                            </div>
+
                             <div class="f-spb">
                                 <div class="f-wrap-none">
                                     <label class="cm-checkbox">
@@ -154,12 +149,13 @@
                         </a>
                         <div class="sign__recommend-line">
                             You have an account yet ?
-                            <a href="#!" class="sign__link"> Sign In</a>
+                            <a href="./sign-up.html" class="sign__link">
+                                Sign up</a
+                            >
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        
     </body>
 </html>
