--- a/index.html
+++ b/index.html
@@ -215,8 +215,8 @@
                                 <div class="product__filter-board">
                                     <section class="filter">
                                         <p class="filter__header">Filter</p>
-                                        <form class="filter__form">
-                                            <div class="filter__body">
+                                        
+                                            <form class="filter__body">
                                                 <!--  -->
                                                 <div class="filter__section">
                                                     <div class="filter__title">
@@ -381,22 +381,18 @@
                                                         </label>
                                                     </div>
                                                 </div>
-                                            </div>
+                                            </form>
                                             <!--  -->
-                                            <div class="filter__btn">
-                                                <button
-                                                    class="filter__btn-cancel"
-                                                >
-                                                    Cancel
-                                                </button>
+                                        
+                                        <div class="filter__btn">
+                                            <button class="filter__btn-cancel">
+                                                Cancel
+                                            </button>
 
-                                                <button
-                                                    class="filter__btn-submit"
-                                                >
-                                                    Show Result
-                                                </button>
-                                            </div>
-                                        </form>
+                                            <button class="filter__btn-submit">
+                                                Show Result
+                                            </button>
+                                        </div>
                                     </section>
                                 </div>
                             </div>
