--- a/sign-in.html
+++ b/sign-in.html
@@ -126,12 +126,12 @@
                             </div>
                         </form>
                         <a
-                            href="./index.html"
+                            href="./main-page.html"
                             class="sign__form-submit sign-up"
                         >
                             Sign Up
                         </a>
-                        <a href="./index.html" class="sign__form-submit gmail">
+                        <a href="./main-page.html" class="sign__form-submit gmail">
                             <svg
                                 class="icon-color"
                                 xmlns="http://www.w3.org/2000/svg"
